WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271299
Images in image-set are not saved when saving web page resources
https://bugs.webkit.org/show_bug.cgi?id=271299
Summary
Images in image-set are not saved when saving web page resources
Sihui Liu
Reported
2024-03-19 22:40:59 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-19 22:44:48 PDT
<
rdar://problem/125064898
>
Sihui Liu
Comment 2
2024-03-19 22:57:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26174
EWS
Comment 3
2024-03-21 09:39:53 PDT
Committed
276472@main
(501aaeb2c61b): <
https://commits.webkit.org/276472@main
> Reviewed commits have been landed. Closing PR #26174 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug