Images in image-set are not saved when saving web page resources https://bugs.webkit.org/show_bug.cgi?id=271299 rdar://problem/125064898

Reviewed by Ryosuke Niwa.

CSSImageSetOptionValue has two enclosed CSSValues (one of which is a CSSImageValue) that do not get visited by custom
functions. As a result, the subresource is not collected and URL is not replaced when web page is saved. To fix this,
add implementation for the custom functions in CSSImageSetOptionValue.

* Source/WebCore/css/CSSImageSetOptionValue.cpp:
(WebCore::CSSImageSetOptionValue::customTraverseSubresources const):
(WebCore::CSSImageSetOptionValue::customSetReplacementURLForSubresources):
(WebCore::CSSImageSetOptionValue::customClearReplacementURLForSubresources):
* Source/WebCore/css/CSSImageSetOptionValue.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/CreateWebArchive.mm:

Canonical link: https://commits.webkit.org/276472@main