Source/WebCore/css/CSSImageSetOptionValue.h
@@ -57,6 +57,9 @@ public:
             return IterationStatus::Done;
         return IterationStatus::Continue;
     }
+    bool customTraverseSubresources(const Function<bool(const CachedResource&)>&) const;
+    void customSetReplacementURLForSubresources(const HashMap<String, String>&);
+    void customClearReplacementURLForSubresources();
 
 private:
     CSSImageSetOptionValue(Ref<CSSValue>&&, Ref<CSSPrimitiveValue>&&);
